<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Biso Mobile App</string>
    <string name="apayer">0.00</string>
    <string name="coderadost">CODE RADOST</string>
    <string name="newPatient">REGISTER A  NEW  PATIENT</string>
    <string name="patients">LIST OF  PATIENTS</string>
    <string name="app_message1">Radost Mobile v 1.0</string>
    <string name="app_message">Biso Mobile v 1.0</string>
    <string name="hint_name">Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_firstname">Firstname</string>
    <string name="register">Register</string>
</resources>
